# CollisionCraft

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-archlinux-build.yml  cmake-macos-build.yml  cmake-windows-build.yml  test-build-archlinux.yml  test-build-macos.yml  test-build-windows.yml
lib/openusd/lib/: libMaterialXGenGlsl.1.39.3.dylib  libMaterialXGenOsl.dylib  libMaterialXGenShader.1.dylib  libMaterialXRenderGlsl.1.dylib  libMaterialXRenderMsl.dylib  libMaterialXRenderOsl.dylib  libtbbmalloc_proxy_debug.dylib  libusd_ar.dylib  libusd_gf.dylib  libusd_js.dylib  libusd_kind.dylib  libusd_ndr.dylib  libusd_pegtl.dylib  libusd_plug.dylib  libusd_sdr.dylib  libusd_tf.dylib  libusd_ts.dylib  libusd_usdGeom.dylib  libusd_usdHydra.dylib  libusd_usdMedia.dylib  libusd_usdMtlx.dylib  libusd_usdPhysicsValidators.dylib  libusd_usdProc.dylib  libusd_usdSemantics.dylib  libusd_usdShade.dylib  libusd_usdSkel.dylib  libusd_usdUI.dylib  libusd_usdUtilsValidators.dylib  libusd_work.dylib
lib/openusd/lib/cmake/MaterialX/: MaterialXTargets-release.cmake
lib/openusd/lib/usd/sdr/resources/: plugInfo.json
lib/openusd/lib/usd/usd/resources/: plugInfo.json
lib/openusd/lib/usd/usdMedia/resources/: plugInfo.json
lib/openusd/lib/usd/usdMtlx/resources/: plugInfo.json
lib/openusd/lib/usd/usdRi/resources/: plugInfo.json
lib/openusd/lib/usd/usdShade/resources/: plugInfo.json
lib/openusd/lib/usd/usdSkel/resources/: plugInfo.json
lib/openusd/linux/lib/: libMaterialXCore.so.1.39.3  libMaterialXFormat.so.1.39.3  libMaterialXGenGlsl.so.1.39.3  libMaterialXGenMdl.so.1.39.3  libMaterialXGenMsl.so.1.39.3  libMaterialXGenOsl.so.1.39.3  libMaterialXGenShader.so.1.39.3  libMaterialXRender.so.1.39.3  libMaterialXRenderGlsl.so.1.39.3  libMaterialXRenderHw.so.1.39.3  libMaterialXRenderOsl.so.1.39.3  libtbb.so.2  libtbb_debug.so.2  libtbbmalloc.so.2  libtbbmalloc_debug.so.2  libtbbmalloc_proxy.so.2  libtbbmalloc_proxy_debug.so.2
lib/openusd/linux/lib/cmake/MaterialX/: MaterialXConfig.cmake  MaterialXTargets.cmake
lib/openusd/linux/lib/usd/ndr/resources/: plugInfo.json
lib/openusd/linux/lib/usd/sdr/resources/: plugInfo.json
lib/openusd/linux/lib/usd/usdHydra/resources/: plugInfo.json
lib/openusd/linux/lib/usd/usdLux/resources/: plugInfo.json
lib/openusd/linux/lib/usd/usdMtlx/resources/: plugInfo.json
lib/openusd/linux/lib/usd/usdRi/resources/: plugInfo.json
lib/openusd/linux/lib/usd/usdShade/resources/: plugInfo.json
lib/openusd/linux/lib/usd/usdValidation/resources/: plugInfo.json
lib/openusd/macos/lib/: libMaterialXCore.1.dylib  libMaterialXFormat.dylib  libMaterialXGenMdl.dylib  libMaterialXGenMsl.1.dylib  libMaterialXRender.1.39.3.dylib  libMaterialXRenderHw.dylib  libtbb.dylib  libtbb_debug.dylib  libtbbmalloc.dylib  libtbbmalloc_debug.dylib  libtbbmalloc_proxy.dylib  libusd_arch.dylib  libusd_pcp.dylib  libusd_trace.dylib  libusd_usdGeomValidators.dylib  libusd_usdLux.dylib  libusd_usdPhysics.dylib  libusd_usdRender.dylib  libusd_usdRi.dylib  libusd_usdShadeValidators.dylib  libusd_usdSkelValidators.dylib  libusd_usdUtils.dylib  libusd_usdValidation.dylib  libusd_usdVol.dylib  libusd_vt.dylib
lib/openusd/macos/lib/cmake/MaterialX/: MaterialXTargets.cmake
lib/openusd/macos/lib/usd/ndr/resources/: plugInfo.json
lib/openusd/macos/lib/usd/usdGeom/resources/: plugInfo.json
lib/openusd/macos/lib/usd/usdHydra/resources/: plugInfo.json
lib/openusd/macos/lib/usd/usdLux/resources/: plugInfo.json
lib/openusd/macos/lib/usd/usdPhysics/resources/: plugInfo.json
lib/openusd/macos/lib/usd/usdProc/resources/: plugInfo.json
lib/openusd/macos/lib/usd/usdRender/resources/: plugInfo.json
lib/openusd/macos/lib/usd/usdSemantics/resources/: plugInfo.json
lib/openusd/macos/lib/usd/usdUI/resources/: plugInfo.json
lib/openusd/macos/lib/usd/usdValidation/resources/: plugInfo.json
lib/openusd/macos/lib/usd/usdVol/resources/: plugInfo.json
lib/vhacd/linux/include/: vhacdICHull.h
lib/vhacd/macos/lib/: liblibvhacd.dylib
lib/vhacd/windows/lib/: libvhacd.exp  libvhacd.lib  vhacd.lib
lib/vhacd/windows/lib/cmake/vhacd/: vhacd-targets-release.cmake  vhacd-targets.cmake
resources/: resources.qrc
resources/models/: arch.usdc  cube.usdc  sphere.usdc  suzanne.usdc  teapot.usdc
resources/packaging/linux/: CollisionCraft.desktop
resources/shaders/: collision.ps  collision.vs  grid.ps  grid.vs  model.ps  model.vs  wireframe.ps  wireframe.vs
resources/ui/: mainwindow.ui  stylesheet.qss  viewport_settings.ui
shell/: build-product.bat  build-product.sh  build-run.sh  build.bat  build.sh  run.bat  run.sh
source/: appwindow.cpp  appwindow.h  collisiongen.cpp  collisiongen.h  expanderwidget.cpp  expanderwidget.h  graphics.cpp  graphics.h  gridrendermesh.cpp  gridrendermesh.h  logging.cpp  logging.h  logwidget.cpp  logwidget.h  main.cpp  mesh.cpp  mesh.h  modelloader.cpp  modelloader.h  propertypanel.cpp  propertypanel.h  propertywidgets.cpp  propertywidgets.h  rendermesh.cpp  rendermesh.h  scenemodel.cpp  scenemodel.h  viewportcamera.cpp  viewportcamera.h  viewportsettingsbase.h  viewportsettingswidget.cpp  viewportsettingswidget.h  viewportwidget.cpp  viewportwidget.h  windowbase.h
